--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "daisyui": "^3.0.3"
+  }
 }
