--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "twilio": "^4.11.2"
   },
   "license": "MIT",
   "devDependencies": {
